--- a/hrms_project/employees/templates/employees/employee_form.html
+++ b/hrms_project/employees/templates/employees/employee_form.html
@@ -13,145 +13,8 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="card">
-        <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" data-bs-toggle="tab" href="#general">General</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#employment">Employment</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#visa">Visa & Accommodation</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#contract">Contract</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#salary">Salary</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="tab" href="#bond">Bond</a>
-                </li>
-            </ul>
-        </div>
         <div class="card-body">
-            <div class="tab-content">
-                <!-- General Information -->
-                <div class="tab-pane fade show active" id="general">
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form.employee_number|as_crispy_field }}
-                            {{ form.first_name|as_crispy_field }}
-                            {{ form.middle_name|as_crispy_field }}
-                            {{ form.last_name|as_crispy_field }}
-                            {{ form.first_name_ar|as_crispy_field }}
-                            {{ form.middle_name_ar|as_crispy_field }}
-                            {{ form.last_name_ar|as_crispy_field }}
-                            {{ form.date_of_birth|as_crispy_field }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form.gender|as_crispy_field }}
-                            {{ form.marital_status|as_crispy_field }}
-                            {{ form.nationality|as_crispy_field }}
-                            {{ form.religion|as_crispy_field }}
-                            {{ form.education_category|as_crispy_field }}
-                            {{ form.cpr_number|as_crispy_field }}
-                            {{ form.email|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Employment Information -->
-                <div class="tab-pane fade" id="employment">
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form.designation|as_crispy_field }}
-                            {{ form.division|as_crispy_field }}
-                            {{ form.department|as_crispy_field }}
-                            {{ form.manager|as_crispy_field }}
-                            {{ form.location|as_crispy_field }}
-                            {{ form.contract_type|as_crispy_field }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form.joined_date|as_crispy_field }}
-                            {{ form.rejoined_date|as_crispy_field }}
-                            {{ form.in_probation|as_crispy_field }}
-                            {{ form.is_manager|as_crispy_field }}
-                            {{ form.cost_center|as_crispy_field }}
-                            {{ form.profit_center|as_crispy_field }}
-                            {{ form.employee_category|as_crispy_field }}
-                            {{ form.payroll_group|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Visa & Accommodation -->
-                <div class="tab-pane fade" id="visa">
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form.company_accommodation|as_crispy_field }}
-                            {{ form.visa_cr_number|as_crispy_field }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form.sponsor_name|as_crispy_field }}
-                            {{ form.accom_occu_date|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Contract Details -->
-                <div class="tab-pane fade" id="contract">
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form.contract_start_date|as_crispy_field }}
-                            {{ form.contract_end_date|as_crispy_field }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form.notice_period|as_crispy_field }}
-                            {{ form.leave_accrual_rate|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Salary Information -->
-                <div class="tab-pane fade" id="salary">
-                    <div class="row">
-                        <div class="col-md-4">
-                            {{ form.basic_salary|as_crispy_field }}
-                        </div>
-                        <div class="col-md-4">
-                            {{ form.total_allowances|as_crispy_field }}
-                        </div>
-                        <div class="col-md-4">
-                            {{ form.total_deductions|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Bond Details -->
-                <div class="tab-pane fade" id="bond">
-                    <div class="row">
-                        <div class="col-md-6">
-                            {{ form.bond_amount|as_crispy_field }}
-                        </div>
-                        <div class="col-md-6">
-                            {{ form.guarantee_details|as_crispy_field }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card-footer">
-            <div class="row">
-                <div class="col">
-                    {{ form.is_active|as_crispy_field }}
-                </div>
-                <div class="col text-end">
-                    <a href="{% url 'employees:employee_list' %}" class="btn btn-secondary">Cancel</a>
-                    <button type="submit" class="btn btn-primary">Save</button>
-                </div>
-            </div>
+            {% crispy form %}
         </div>
     </div>
 </form>
